TestRepo2/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Actual_Title__c</fullName>
        <label>Actual Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DGUSA_Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operating Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day to Day Oversight of the Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chain Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations: Supply/Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draught Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Mgmt/Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DGUSA_Title__c</fullName>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>Owner ( usually family)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Exec Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manager or President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director level/Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guinness Brand Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGUSA Distributor Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>New_Org_ID__c</fullName>
        <label>New Org ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Prod_ID__c</fullName>
        <label>New Prod ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Primary_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <sharedTo>
            <role>DiageoNorthAmerica</role>
            <role>Division_Sales_Director_East</role>
            <role>Division_Sales_Director_West</role>
            <role>Executive_Vice_President</role>
            <role>General_Manager_East</role>
            <role>General_Manager_West</role>
            <role>MarketingDirectors191001</role>
            <role>NASW_Division_Sales_Director_East</role>
            <role>NASW_Division_Sales_Director_West</role>
            <role>NASW_Sales_Analytics_Manager_East</role>
            <role>NASW_Sales_Analytics_Manager_West</role>
            <role>NASW_Sales_Manager_East</role>
            <role>NASW_Sales_Manager_West</role>
            <role>NASW_State_Director_East</role>
            <role>NASW_State_Director_West</role>
            <role>NASW_State_Vice_President_East</role>
            <role>NASW_State_Vice_President_West</role>
            <role>North_American_Wine_Spirits</role>
            <role>President</role>
            <role>Sales_Analytics_Manager_East</role>
            <role>Sales_Analytics_Manager_West</role>
            <role>Sales_Director_East</role>
            <role>Sales_Director_West</role>
            <role>Sales_Manager_East_CT</role>
            <role>Sales_Manager_West</role>
            <role>Senior_Vice_President_East</role>
            <role>Senior_Vice_President_West</role>
            <role>subposition</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <sharedTo>
            <role>DiageoNorthAmerica</role>
            <role>Division_Sales_Director_East</role>
            <role>Division_Sales_Director_West</role>
            <role>Executive_Vice_President</role>
            <role>General_Manager_East</role>
            <role>General_Manager_West</role>
            <role>MarketingDirectors191001</role>
            <role>NASW_Division_Sales_Director_East</role>
            <role>NASW_Division_Sales_Director_West</role>
            <role>NASW_Sales_Analytics_Manager_East</role>
            <role>NASW_Sales_Analytics_Manager_West</role>
            <role>NASW_Sales_Manager_East</role>
            <role>NASW_Sales_Manager_West</role>
            <role>NASW_State_Director_East</role>
            <role>NASW_State_Director_West</role>
            <role>NASW_State_Vice_President_East</role>
            <role>NASW_State_Vice_President_West</role>
            <role>North_American_Wine_Spirits</role>
            <role>President</role>
            <role>Sales_Analytics_Manager_East</role>
            <role>Sales_Analytics_Manager_West</role>
            <role>Sales_Director_East</role>
            <role>Sales_Director_West</role>
            <role>Sales_Manager_East_CT</role>
            <role>Sales_Manager_West</role>
            <role>Senior_Vice_President_East</role>
            <role>Senior_Vice_President_West</role>
            <role>subposition</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Diageo</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Diageo</value>
        </filters>
        <label>All Diageo</label>
    </listViews>
    <listViews>
        <fullName>All_Diageo_non</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notEqual</operation>
            <value>Diageo</value>
        </filters>
        <label>All non-Diageo</label>
        <sharedTo>
            <role>DiageoNorthAmerica</role>
            <role>Division_Sales_Director_East</role>
            <role>Division_Sales_Director_West</role>
            <role>Executive_Vice_President</role>
            <role>General_Manager_East</role>
            <role>General_Manager_West</role>
            <role>MarketingDirectors191001</role>
            <role>NASW_Division_Sales_Director_East</role>
            <role>NASW_Division_Sales_Director_West</role>
            <role>NASW_Sales_Analytics_Manager_East</role>
            <role>NASW_Sales_Analytics_Manager_West</role>
            <role>NASW_Sales_Manager_East</role>
            <role>NASW_Sales_Manager_West</role>
            <role>NASW_State_Director_East</role>
            <role>NASW_State_Director_West</role>
            <role>NASW_State_Vice_President_East</role>
            <role>NASW_State_Vice_President_West</role>
            <role>North_American_Wine_Spirits</role>
            <role>President</role>
            <role>Sales_Analytics_Manager_East</role>
            <role>Sales_Analytics_Manager_West</role>
            <role>Sales_Director_East</role>
            <role>Sales_Director_West</role>
            <role>Sales_Manager_East_CT</role>
            <role>Sales_Manager_West</role>
            <role>Senior_Vice_President_East</role>
            <role>Senior_Vice_President_West</role>
            <role>subposition</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>